finally fixed the bloody navbar and stopped it doing funny shit, it was having this issue where over ~850 screen width, it would expand downwards, covering half the screen, id basically worked around it until recently showing people and the bug was starting to become quite embarrassing, found a fix on stack overflow but even that didnt work, it added black bars under the nav and to the right side of the screen, basically fucking all the map api stuff, ended up being a fairly simple fix, all the li a tags were on the same lines, they needed to just be broken down and staggered individually. all fixed now, both mobile and desktop looks pretty proper

--- a/public/stylesheets/home_style.css
+++ b/public/stylesheets/home_style.css
@@ -11,10 +11,14 @@ html, body {
   border: 0px !important;
  }
 
- #pano {
-         width: 200px;
-         height: 200px;
-       }
+#pano {
+       width: 200px;
+       height: 200px;
+     }
+
+#bs-example-navbar-collapse-1 {
+  margin-bottom: 0px;
+}
 
 /*#toggle-drawing {
   width: 27%;
@@ -25,7 +29,7 @@ html, body {
 .controls {
        margin-top: 10px;
        border: 2px solid transparent;
-       border-radius: 1px 1px 1px 1px;
+       border-radius: 2px 2px 2px 2px;
        box-sizing: border-box;
        -moz-box-sizing: border-box;
        height: 20px;
